# ComfyUI-DiffusersLoader

./: .gitignore  .gitignore.txt  README.md  __init__.py  base_loader.py  clip_loader.py  combined_diffusers_loader.py  diffusers_clip_loader.py  diffusers_unet_loader.py  diffusers_vae_loader.py  folder_paths.py  loader.py  loader_factory.py  model_type_config.py  pyproject.toml  requirements.txt  sd15_clip_loader.py  sd15_combined_loader.py  sd15_unet_loader.py  sd15_vae_loader.py  sdxl_clip_loader.py  sdxl_combined_loader.py  sdxl_unet_loader.py  sdxl_vae_loader.py  test.py  test2.py  unet_loader.py  utils.py  vae_loader.py
Old/: sd15_combined_loader.py  sd15_unet_loader.py  sd15_vae_loader.py  sdxl_combined_loader.py  sdxl_unet_loader.py  sdxl_vae_loader.py
