[project]
name = "comfyui-diffusersloader"
description = "This node pack allows loading of CLIP, MODEL, VAE aspects for both SD1.5 and SDXL checkpoints that is converted to diffusers format."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Scorpinaus/ComfyUI-DiffusersLoader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DiffusersLoader"
Icon = ""
