[project]
name = "ComfyUI-DiffusersLoader"
description = "This node pack allows loading of SD checkpoints that uses diffusers format in comfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Scorpinaus/ComfyUI-DiffusersLoader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Scorpinaus"
DisplayName = "ComfyUI-DiffusersLoader"
Icon = ""
