[project]
name = "comfyui-diffusersloader"
description = "This node pack allows loading of SD checkpoints that uses diffusers format in comfyUI
- Supports SD1.5, SD2, SDXL, SD3, Flux and AuraFlow Checkpoints"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Scorpinaus/ComfyUI-DiffusersLoader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mhms"
DisplayName = "ComfyUI-DiffusersLoader"
Icon = ""
